[gd_scene load_steps=8 format=2]

[ext_resource path="res://sfx/TheSound.gd" type="Script" id=1]
[ext_resource path="res://sfx/quick-sacrifices.ogg" type="AudioStream" id=2]
[ext_resource path="res://sfx/small-laser.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/crash.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/small-explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/medium-explosion.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/hit.wav" type="AudioStream" id=7]

[node name="TheSound" type="Node" index="0"]

script = ExtResource( 1 )

[node name="InGameMusic" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SmallLaser" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Crash" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SmallExplosion" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="MediumExplosion" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Hit" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


